--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>苏州千旭精密制造有限公司</title>
-    <meta name="description" content="苏州千旭精密制造有限公司是一家专注于精密吊装配件研发、生产与销售的企业，主要产品涵盖万向吊环、侧拉吊环、卸扣型吊环等，广泛应用于机械制造、模具、建筑、物流等行业。公司拥有先进的生产设备和完善的质量管理体系，坚持以优质的产品和专业的服务满足客户多样化需求，致力于为各行业提供高效、安全的吊装解决方案。">
-    <meta name="keywords" content="滚珠吊环, 侧拉吊环, 眼型吊环, 螺母吊环, 卸扣吊环, 工业万向旋转吊环, 苏州千旭精密制造有限公司">
+    <title>苏州千旭精密制造有限公司 - 专业万向吊环,侧拉吊环,卸扣型吊环生产厂家</title>
+    <meta name="description" content="苏州千旭精密制造有限公司，专业研发生产万向吊环、侧拉吊环、卸扣型吊环等精密吊装配件。我们提供高品质、CE认证的吊环产品，广泛应用于机械、模具、建筑、物流等行业，致力于为客户提供安全高效的吊装解决方案。">
+    <meta name="keywords" content="苏州千旭, 精密制造, 万向吊环, 侧拉吊环, 卸扣型吊环, 滚珠吊环, 吊环, 吊装配件, 吊点, CE认证, 模具吊环, 机械吊环">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="/cdn-cgi/apps/head/3ts2ksMwXvKRuG480KNifJ2_JNM.js"></script><link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700"> -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
@@ -95,8 +94,8 @@
               <div class="container">
                 <div class="row">
                   <div class="col-sm-8 col-md-7">
-                    <h1 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">专业吊环制造<br></h1>
-                    <h2 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">Professional</h2>
+                    <h2 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">专业吊环制造<br></h2>
+                    <h3 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">Professional</h3>
                     <h5 class="swiper-title-2 text-width-medium" data-caption-animate="fadeInLeft" data-caption-delay="250">国家级高新技术产业，致力于高品质吊环及各类吊点研发制造。</h5>
                   </div>
                 </div>
@@ -106,8 +105,8 @@
           <div class="swiper-slide swiper-slide-2" data-slide-bg="images/baner_1.jpg">
             <div class="swiper-slide-caption section-md text-center">
               <div class="container">
-                <h1 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">权威CE认证</h1>
-                <h2 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">Authoritative CE Certification</h2>
+                <h2 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">权威CE认证</h2>
+                <h3 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">Authoritative CE Certification</h3>
                 <h5 class="swiper-title-2" data-caption-animate="fadeInRight" data-caption-delay="250"><br class="d-none d-md-block">严控品质通过多项认证，为起吊安全保驾护航.
                 </h5>
               </div>
@@ -123,7 +122,7 @@
       <!-- New Flavors-->
       <section class="section section-xxl bg-default">
         <div class="container">
-          <h2 class="text-transform-capitalize wow fadeScale">我们的产品</h2>
+          <h1 class="text-transform-capitalize wow fadeScale">我们的产品</h1>
           <div class="row row-lg row-30 row-lg-50 justify-content-center">
             <div class="col-12 col-md-4">
               <!-- Product-->
@@ -286,10 +285,7 @@
                       <div class="product-figure"><img src="images/factory/example_3.jpg" alt="千旭精密制造车间" width="470" height="324"/>
                     </div>
                     </article>
-                    <article class="product-creative">
-                      <div class="product-figure"><img src="images/factory/example_4.jpg" alt="千旭精密制造产品" width="470" height="324"/>
-                      </div>
-                    </article>
+                    
                   </div>
                 </div>
               </div>
@@ -396,13 +392,13 @@
           <div class="isotope-wrap">
             <div class="isotope-filters">
               <button class="isotope-filters-toggle button button-sm button-icon button-icon-right button-default-outline" data-custom-toggle=".isotope-filters-list" data-custom-toggle-disable-on-blur="true" data-custom-toggle-hide-on-blur="true"><span class="icon mdi mdi-chevron-down"></span>Filter</button>
-              <div class="isotope-filters-list-wrap">
+              <!-- <div class="isotope-filters-list-wrap">
                 <ul class="isotope-filters-list">
                   <li><a class="active" href="#" data-isotope-filter="*">所有</a></li>
                   <li><a href="#" data-isotope-filter="Type 1">吊环</a></li>
                   <li><a href="#" data-isotope-filter="Type 2">吊钉</a></li>
                 </ul>
-              </div>
+              </div> -->
             </div>
             <div class="row row-30 isotope isotope-custom-1" data-lightgallery="group">
               <div class="col-sm-6 col-lg-4 col-xl-3 isotope-item" data-filter="Type 1">
