添加网站访问统计代码

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>苏州千旭精密制造有限公司 - 专业万向吊环,侧拉吊环,卸扣型吊环生产厂家</title>
+    <title>苏州千旭精密制造有限公司 - 专业吊环制造解决方案</title>
     <meta name="description" content="苏州千旭精密制造有限公司，专业研发生产万向吊环、侧拉吊环、卸扣型吊环等精密吊装配件。我们提供高品质、CE认证的吊环产品，广泛应用于机械、模具、建筑、物流等行业，致力于为客户提供安全高效的吊装解决方案。">
     <meta name="keywords" content="苏州千旭精密制造有限公司，苏州千旭, 苏州千旭官网, 千旭精密，万向吊环, 侧拉吊环, 卸扣型吊环, 滚珠吊环, 吊环, 吊装配件, 吊点, 模具吊环, 机械吊环">
     <meta charset="utf-8">
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+  <script>LA.init({id:"3NEVYQZnzhjROHZl",ck:"3NEVYQZnzhjROHZl"})</script>
   </head>
   <body>
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
@@ -94,7 +96,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-sm-8 col-md-7">
-                    <h2 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">专业吊环制造<br></h2>
+                    <h2 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">专业吊环制造厂家<br></h2>
                     <h3 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">Professional</h3>
                     <h5 class="swiper-title-2 text-width-medium" data-caption-animate="fadeInLeft" data-caption-delay="250">国家级高新技术产业，致力于高品质吊环及各类吊点研发制造。</h5>
                   </div>
