添加电子图册下载按钮

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- 阿里图标库 - 中国大陆优化 -->
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_8d5l8fzk5b87iudi.css">
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
     <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
   <script>LA.init({id:"3NEVYQZnzhjROHZl",ck:"3NEVYQZnzhjROHZl"})</script>
@@ -539,6 +541,31 @@
       </footer>
     </div>
     <div class="snackbars" id="form-output-global"></div>
+    
+    <!-- 浮窗下载按钮 -->
+    <div class="floating-download-btn">
+        <div class="btn-container">
+            <div class="btn-main">
+                <!-- CSS绘制的书本图标 -->
+                <div class="icon-book"></div>
+                <!-- 阿里图标库备选方案（取消注释使用） -->
+                <!-- <i class="iconfont icon-book"></i> -->
+                <span>电子图册</span>
+            </div>
+            <div class="btn-expanded">
+                <a href="/files/company-brochure.pdf" class="download-btn" download>
+                    <!-- CSS绘制的下载图标 -->
+                    <div class="icon-download">
+                        <div class="download-line"></div>
+                    </div>
+                    <!-- 阿里图标库备选方案（取消注释使用） -->
+                    <!-- <i class="iconfont icon-download"></i> -->
+                    <span>下载</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
   </body>
