为什么选择我们内容填充

--- a/index.html
+++ b/index.html
@@ -310,42 +310,47 @@
                 <!-- Bootstrap card-->
                 <article class="card card-custom card-corporate wow fadeInRight" data-wow-delay=".1s">
                   <div class="card-header" role="tab">
-                    <div class="card-title"><a id="accordion1-card-head-fvdtqdol" data-toggle="collapse" data-parent="#accordion1" href="#accordion1-card-body-gbqibwcr" aria-controls="accordion1-card-body-gbqibwcr" aria-expanded="true" role="button">产品具有权威证书
+                    <div class="card-title"><a id="accordion1-card-head-fvdtqdol" data-toggle="collapse" data-parent="#accordion1" href="#accordion1-card-body-gbqibwcr" aria-controls="accordion1-card-body-gbqibwcr" aria-expanded="true" role="button">"我们值得信赖，因为我们专业、可靠"
                         <div class="card-arrow">
                           <div class="icon"></div>
                         </div></a></div>
                   </div>
                   <div class="collapse show" id="accordion1-card-body-gbqibwcr" aria-labelledby="accordion1-card-head-fvdtqdol" data-parent="#accordion1" role="tabpanel">
                     <div class="card-body">
-                      <p>CE认证，第三方检测报告</p>
+                      <p><b>产品符合国际标准：</b>欧盟CE认证，29项专利技术+4项国标指定能力。</p>
+                      <p><b>原材料可追溯：</b>我们只使用高强度合金钢，并有材质报告和第三方检测，拒绝回收料，从源头保证强度。</p>
+                      <p><b>承载能力公差极小：</b>我们敢承诺，实际承载力远超理论值，并有第三方出具的拉力测试报告（如图文并茂的报告）。客户要安全，我们就把安全“掰开了、揉碎了”给他看。</p>
+                      <p><b>无损检测保证：</b>对每只吊环都进行磁粉探伤或超声波探伤，确保内部无裂纹、砂眼等致命缺陷。</p>
                     </div>
                   </div>
                 </article>
                 <!-- Bootstrap card-->
                 <article class="card card-custom card-corporate wow fadeInRight" data-wow-delay=".2s">
                   <div class="card-header" role="tab">
-                    <div class="card-title"><a class="collapsed" id="accordion1-card-head-mvowfrug" data-toggle="collapse" data-parent="#accordion1" href="#accordion1-card-body-fyqmewaq" aria-controls="accordion1-card-body-fyqmewaq" aria-expanded="false" role="button">厂建规模，实力保证
+                    <div class="card-title"><a id="accordion1-card-head-mvowfrug" data-toggle="collapse" data-parent="#accordion1" href="#accordion1-card-body-fyqmewaq" aria-controls="accordion1-card-body-fyqmewaq" aria-expanded="false" role="button">"我们更懂你的需求，能提供更合适的产品"
                         <div class="card-arrow">
                           <div class="icon"></div>
                         </div></a></div>
                   </div>
                   <div class="collapse" id="accordion1-card-body-fyqmewaq" aria-labelledby="accordion1-card-head-mvowfrug" data-parent="#accordion1" role="tabpanel">
                     <div class="card-body">
-                      <p>公司拥有大型化车间，智能化设备，公司的实力是生产效率和产品品质的双重保障</p>
+                      <p><b>产品系列全，规格多，总有一款适合你：</b>无论是标准直型吊环、旋转吊环（360°旋转，不伤钢丝绳）、可调角度吊环，还是定制特殊形状、特殊尺寸的吊环，我们都生产。客户无需再找第二家供应商。覆盖广泛应用场景：我们的产品广泛应用于港口机械、冶金、风电、航空航天、模具、汽车制造、物流等多个领域，我们有丰富的行业经验。</p>
+                      <p><b>定制化服务能力，满足你的“特殊需求”：</b>非标定制是我们的强项，如果您的设计图纸、工况环境（如耐高温、耐腐蚀）有特殊要求，我们的工程师团队可以为您量身定制解决方案。我们不是简单地卖产品，而是解决您的吊装难题。</p>
                     </div>
                   </div>
                 </article>
                 <!-- Bootstrap card-->
                 <article class="card card-custom card-corporate wow fadeInRight" data-wow-delay=".3s">
                   <div class="card-header" role="tab">
-                    <div class="card-title"><a class="collapsed" id="accordion1-card-head-iyjdbvli" data-toggle="collapse" data-parent="#accordion1" href="#accordion1-card-body-gowcmvoc" aria-controls="accordion1-card-body-gowcmvoc" aria-expanded="false" role="button">备货充足，厂家直发
+                    <div class="card-title"><a id="accordion1-card-head-iyjdbvli" data-toggle="collapse" data-parent="#accordion1" href="#accordion1-card-body-gowcmvoc" aria-controls="accordion1-card-body-gowcmvoc" aria-expanded="false" role="button">"选择我们，你得到的将更多"
                         <div class="card-arrow">
                           <div class="icon"></div>
                         </div></a></div>
                   </div>
                   <div class="collapse" id="accordion1-card-body-gowcmvoc" aria-labelledby="accordion1-card-head-iyjdbvli" data-parent="#accordion1" role="tabpanel">
                     <div class="card-body">
-                      <p>我们的产品备货量足，厂家当天发送物流。</p>
+                      <p><b>超高性价比，综合成本更低：</b>①虽然单价可能不是最低，但绝对是最“值”的：一个便宜的吊环寿命只有100次，而我们能用1000次。按次计算，我们的成本更低。②降低隐性成本：使用劣质吊环导致设备损坏、生产停线甚至安全事故，其损失是巨大的。选择我们，就是规避了这些巨大的隐性风险。③免费样品支持：欢迎索要样品，亲自检验质量。眼见为实，这是我们自信的体现。</p>
+                      <p><b>服务与售后，让你全程无忧：</b>①专业技术支持：从选型、安装到使用维护，我们提供全程技术指导。②完善的质保体系：我们对产品质量负责，在正常使用情况下出现任何质量问题，我们承诺包退包换，提供无忧售后。③快速响应的供应链：我们拥有充足的安全库存，能保证快速发货，满足您的紧急生产需求。</p>
                     </div>
                   </div>
                 </article>
